--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.config.import=file:env.properties
+# Server setup
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/deviceDB
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=public
+# JWT
+spring.jwt.secret=${JWT_SECRET}
