Added Cloudinary dependency and setups

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/deviceDB
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
+# Cloudinary config
+cloudinary.name=${CLOUDINARY_NAME}
+cloudinary.apikey=${CLOUDINARY_KEY}
+cloudinary.secret=${CLOUDINARY_SECRET}
 # JWT
 spring.jwt.secret=${JWT_SECRET}
